# gularen

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Design.gr  License  ReadMe.md  Tasks.gr  build.sh  changelog.md  compile_flags.txt  contributing.md  contributor.md  install.sh  license  makefile  package.kiblis  package.pdh  project.prau  readme.md  spec.html  spec.md  task.gr  tasks.gr  template.html
Source/: ConsoleInterface.cpp  Parser.cpp
Tests/: Parser.cpp
cli/: main.cpp  project.prau  readme.md
design/: 01-comment.gr  02-font-style.gr  03-heading.gr  04-paragraph.gr  05-indentation.gr  06-breaking.gr  07-list.gr  08-table.gr  09-link.gr  0A-image.gr  0B-code.gr  0C-admonition.gr  0D-punctuation-mark.gr  0D-quotation.gr  0E-variable.gr  0F-inclusion.gr  10-webpage-embedding.gr  11-blockquote.gr  12-footnote.gr  13-emoji.gr  overview.txt
draft/: heading-conflicting-subsection-name.gr  table-merged-cells.gr
editor/: index.html  style.css
script/: build.sh  install.sh  spec-readme.sh  test-build.sh  test-run.sh
source/: BibliographyMaker.cpp  BibliographyMaker.hpp  CitationGen.cpp  CitationGen.hpp  EmojiGen.cpp  EmojiGen.hpp  EmojiMaker.cpp  EmojiMaker.hpp  HTMLGen.cpp  HTMLGen.hpp  HtmlGen.cpp  HtmlGen.hpp  Lexer.cpp  Lexer.hpp  Linker.cpp  Linker.hpp  OutlineGen.hpp  Parser.cpp  Parser.hpp  Printer.cpp  Printer.hpp  ReferenceGen.cpp  ReferenceGen.hpp  Stripper.cpp  Stripper.hpp  cli.cpp  generateAPA.hpp  generateEmoji.hpp  generateHTML.hpp  lexeme.cpp  lexeme.hpp  main.cpp  parse.cpp  parse.hpp  print.cpp  print.hpp  test.cpp
spec/: 00-index.gr  00-master.gr  01-comment.gr  02-annotation.gr  02-font-style.gr  02-paragraph.gr  02-style.gr  03-heading.gr  03-style.gr  04-highlight.gr  04-paragraph.gr  05-heading.gr  05-indentation.gr  06-breaking.gr  07-blockquote.gr  07-breaking.gr  07-escape.gr  07-indentation.gr  07-list.gr  08-blockquote.gr  08-list.gr  08-table.gr  09-code.gr  09-column.gr  09-definition-list.gr  09-heading.gr  09-link.gr  09-list.gr  09-section.gr  0A-image.gr  0A-link.gr  0A-linker.gr  0A-reader.gr  0B-code.gr  0B-presenter.gr  0C-admonition.gr  0C-inclusion.gr  0D-footnote.gr  0D-punctuation-mark.gr  0E-code.gr  (+44 more)
src/: ConsoleInterface.cpp  ConsoleInterface.hpp  main.cpp
test/: 01-comment.gr  07-list.gr  0C-inclusion.gr  0E-code.gr  Tester.cpp  Tester.h  build.sh  heading-paragraph.gr  heading.gr  jagged-indent.gr  list-detail.gr  lsBreakingTest.h  lsCommentTest.h  lsFontStyleTest.h  lsHeadingTest.h  lsIndentationTest.h  lsParagraphTest.h  main.cpp  primitiveTest.h  run.sh  social-ref.gr
tests/: LSBreakingTest.h  LSCommentTest.h  (+8 more)
(+445 files in other folders)
